# marlowe-rs

./: .gitignore  404.html  CNAME  Cargo.toml  build_npm_packages.ps1  build_wasm.ps1  build_wasm_for_nodejs.ps1  build_wasm_for_wasi.ps1  build_wasm_for_web.ps1  example.ipynb  grammar.pest  index.html  index.md  index.txt  marlowe.lbnf  readme.md  rust-toolchain.toml  sample.marlowe  sample.marlowe.state_machine  sample.marlowe.state_machine_runtime  specification-v3.html  test.md
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
_next/static/chunks/: 769-08a643e56bcfb273.js  875.198ff48ad351ca2b.js  main-95840845ae052e43.js  main-app-723a5f6dc0dd1038.js  main-app-ad5a081e55d49208.js  main-app-fc63ac4c40c3e3f8.js  webpack-25168fa488c7fac3.js  webpack-e6993784af32b528.js
_next/static/chunks/app/: layout-7738a9d3570a5701.js  page-571c2dc9c90e00ae.js
_next/static/css/: a92cd86799991915.css
_next/static/wasm/: 40a22926b8e93b25.wasm
examples/: index.html
examples/deno/: app.cjs  app.js  init_contract.js  package-lock.json  package.json  readme.md  run.ps1
examples/html/: index.html  readme.md
examples/node_app/: app.js  package.json
examples/nodejs/: index.js  package-lock.json  package.json  readme.md
examples/react/: README.md  next.config.js  package-lock.json  package.json  tsconfig.json
examples/react/app/: globals.css  layout.tsx  page.tsx
examples/rust/: basic.md  iterator.md
examples/wasm/: index.html  marlowe_lang.d.ts  marlowe_lang.js  marlowe_lang_bg.wasm  marlowe_lang_bg.wasm.d.ts
examples/wasm_nodejs/: marlowe_lang.d.ts  marlowe_lang.js  marlowe_lang_bg.wasm  marlowe_lang_bg.wasm.d.ts
examples/wasm_web/: marlowe_lang.d.ts  marlowe_lang.js  marlowe_lang_bg.wasm  marlowe_lang_bg.wasm.d.ts
json_tests/: swap_from_marlowe_lang.json  swap_from_playground.json  test_timeouts_as_serialized_by_playground.json  test_timeouts_from_marlowe_lang.json
marlowe_playground_samples/: Contract_For_Differences.marlowe  Contract_For_Differences_with_Oracle.marlowe  Zero_Coupon_Bond.marlowe  escrow.marlowe  swap.marlowe  test_deeply_nested_contract.marlowe  test_holes.marlowe  test_timeouts.marlowe  test_value_types.marlowe
pkg_bundle/pkg/: marlowe_lang.d.ts  marlowe_lang.js  marlowe_lang_bg.js  marlowe_lang_bg.wasm  marlowe_lang_bg.wasm.d.ts  package.json
pkg_njs/pkg/: marlowe_lang.js  marlowe_lang_bg.wasm  package.json
pkg_wasi/: marlowe_lang.wasm  marlowe_lang_cli.wasm
pkg_web/pkg/: marlowe_lang.d.ts  marlowe_lang.js  marlowe_lang_bg.wasm  package.json
plutus_tests/: plutus_test_values.plutusdatadetailedjson
src/cli_tool_bin/: args.rs  main.rs
src/lib/: lib.rs  macros.rs  semantics.rs  tests.rs
src/lib/deserialization/: json.rs  marlowe.rs  mod.rs
src/lib/extras/: js.rs  mod.rs  utils.rs  wasi.rs  wasm.rs
src/lib/parsing/: deserialization.rs  fmt.rs  marlowe.rs  mod.rs  serialization.rs
src/lib/serialization/: cborhex.rs  json.rs  marlowe.rs  mod.rs
src/lib/simulation/: mod.rs  state_machine.rs
src/lib/tests/: core.rs  mod.rs  plutus.rs  semantics.rs  serialization.rs
src/lib/types/: marlowe.rs  marlowe_address.rs  marlowe_core.rs  marlowe_strict.rs  marlowe_without_holes.rs  mod.rs  ordering.rs
test_contracts/: Contract_For_Differences.marlowe  Contract_For_Differences_with_Oracle.marlowe  Escrow_With_Collateral.marlowe  test_timeouts.marlowe  test_uninitialized_timeout.marlowe  test_values.marlowe
test_data/: Contract_For_Differences_with_Oracle.marlowe  Escrow_With_Collateral.marlowe  datum.cborhex  datum.json  datum2.cborhex  datum_continuation_sample.marlowe  escrow.marlowe  redeemer.cborhex  redeemer.json  sample_when_contract.json  simple_value_let.json  simple_value_let.marlowe  swap.marlowe  test_assert.marlowe  test_choices.marlowe  test_deeply_nested_contract.marlowe  test_simple_addr_mainnet_type00.marlowe  test_simple_addr_mainnet_type01.marlowe  test_simple_addr_mainnet_type02.marlowe  test_simple_addr_mainnet_type03.marlowe  test_simple_addr_mainnet_type04.marlowe  test_simple_addr_mainnet_type05.marlowe  test_simple_addr_mainnet_type06.marlowe  test_simple_addr_mainnet_type07.marlowe  test_simple_addr_mainnet_type14.marlowe  test_simple_addr_mainnet_type15.marlowe  test_simple_addr_testnet_type00.marlowe  test_simple_addr_testnet_type01.marlowe  test_simple_addr_testnet_type02.marlowe  test_simple_addr_testnet_type03.marlowe  test_simple_addr_testnet_type04.marlowe  test_simple_addr_testnet_type05.marlowe  test_simple_addr_testnet_type06.marlowe  test_simple_addr_testnet_type07.marlowe  test_simple_addr_testnet_type14.marlowe  test_simple_addr_testnet_type15.marlowe  test_timeouts.marlowe  test_timeouts_as_serialized_by_playground_probably_when_it_supports_addresses.json  test_uninitialized_constants.marlowe  test_uninitialized_timeout.marlowe  (+2 more)
