[package]
name = "marlowe_lang"
description = "experimental parser lib for Cardano Marlowe DSL"
version = "0.1.17"
edition = "2021"
authors = ["Olof Blomqvist <olof@twnet.se>"]
repository = "https://github.com/OlofBlomqvist/marlowe_rust"
license-file = "licence"

[dependencies]
pest_derive = "2.1.0"
pest = { version = "2.1.3", features= ["pretty-print"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81" , features = ["unbounded_depth"] }
clap = { version = "4.0.19", features = ["derive"] }
# =============================================================
plutus_data = { version = "0.0.5", optional = true }
#plutus_data = { path = "../plutus_data/plutus_data", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
serde_derive = { version = "1.0.144", optional = true }
#uplc = { git = "https://github.com/txpipe/aiken", optional = true }
hex = { version = "0.4.3", optional = true }
minicbor = { version = "0.18.0", optional = true }
cardano-multiplatform-lib = { version = "3.1.0", optional = true }
wasm-bindgen = { version = "0.2.78", optional = true , features=["serde-serialize"]}
web-sys = { version = "0.3.4", features = [ 'console' ], optional = true }
bech32 = "0.9.1"
chrono = { version = "0.4", features = ["wasmbind"] }
#aiken-lang = "*"
js-sys = { version = "*", optional=true }
serde_stacker = {version= "0.1.7"}
# =============================================================


[features]
default = ["utils"]
unstable = []
utils = [
    "dep:cardano-multiplatform-lib",
    "dep:minicbor",
    "dep:plutus_data",
    "dep:hex",
    #"dep:uplc",
    "dep:serde_derive" ]
wasm = [
    "utils",
    "dep:js-sys",
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
    "dep:web-sys" ]
[lib]
name = "marlowe_lang"
path = "src/lib/lib.rs"
crate-type = ["cdylib","rlib"]

[[bin]]
name = "marlowe_lang_cli"
path = "src/cli_tool_bin/main.rs"
required-features = ["utils"]

