[package]
name = "marlowe_lang"
description = "experimental parser lib for Cardano Marlowe DSL"
version = "0.1.25"
edition = "2021"
authors = ["Olof Blomqvist <olof@twnet.se>"]
repository = "https://github.com/OlofBlomqvist/marlowe_rust"
license-file = "licence"

[dependencies]
pest_derive = "2.1.0"
pest = { version = "2.1.3", features= ["pretty-print"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81" , features = ["unbounded_depth"] }
clap = { version = "4.0.19", features = ["derive"] }
# =============================================================
plutus_data = { version = "0.0.5", optional = true }
#plutus_data = { path = "../plutus_data/plutus_data", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
serde_derive = { version = "1.0.144", optional = true }
#uplc = { git = "https://github.com/txpipe/aiken", optional = true }
hex = { version = "0.4.3", optional = true }
minicbor = { version = "0.19.0", optional = true }
cardano-multiplatform-lib = { version = "3.1.2", optional = true, feature=["wasm"] }
getrandom = { version = "0.2.8", features = ["js"], optional = true}
wasm-bindgen = { version = "0.2.82", optional = true , features=["serde-serialize"]}
web-sys = { version = "0.3.4", features = [ 'console' ], optional = true }
bech32 = "0.9.1"
time = "0.3.17"
chrono = { version = "0.4.23", features = ["wasmbind"] }
#aiken-lang = "*"
js-sys = { version = "0.3.59", optional=true}
serde_stacker = {version= "0.1.7"}
proc-macro2 = "1.0.63"

[features]
default = ["utils"]
unstable = []
wasi = []
utils = [
    "dep:cardano-multiplatform-lib",
    "dep:minicbor",
    "dep:plutus_data",
    "dep:hex",
    "dep:serde_derive" ]
js = [
    "utils",
    "dep:js-sys",
    "dep:getrandom",
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
    "dep:web-sys" ]
[lib]
name = "marlowe_lang"
path = "src/lib/lib.rs"
crate-type = ["cdylib","rlib"]

[[bin]]
name = "marlowe_lang_cli"
path = "src/cli_tool_bin/main.rs"
required-features = ["utils"]


[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization